core: remove old infra model